...
          <ScrollView
            style={{ flex: 1 }}
            showsVerticalScrollIndicator={false}
            contentContainerStyle={{ flexGrow: 1 }}
            keyboardShouldPersistTaps="handled"
          >
            <VStack testID="screen-login" justifyContent="space-between" flex={1} mx={6} py={32}>

        <Text color="gray.900" fontSize={32} fontWeight={800} lineHeight={38} letterSpacing={-1.2} mb={3}>
          Entre
        </Text>

      <Text color="gray.500" fontSize={16} fontWeight={500} lineHeight={24} mb={4}>
...
        </HStack>

        <HStack alignItems="center" justifyContent="center" mt={-6}>
          <Text fontSize={14} color="gray.400" fontWeight={600} letterSpacing={-0.14}>
            Não tem uma conta?{' '}
          </Text>
          <TouchableOpacity testID="btn-go-to-signup" onPress={() => navigation.navigate('signUp')}>
            <Text fontSize={14} color="purple.600" fontWeight={600} underline letterSpacing={-0.14}>
              Cadastre-se.
            </Text>
          </TouchableOpacity>
        </HStack>

...
