...
                h="90%"
              />
            </Box>
          </PressableScale>

          <PressableScale
            testID="btn-gender-male"
            onPress={() => {
              setGender('M');
              scrollRef.current?.scrollToEnd({ animated: true });
            }}
          >
            <Box
...
              handleNextStep();
            }}
            icon={<ArrowIcon color="#3D4966" />}
          />

          <Button
            testID="btn-onboarding-continue"
            variant="primary"
            size="full"
            title="Continuar"
            onPress={() => {
              // Já está sendo salvo automaticamente pelo useEffect
              handleNextStep();
...
